# autograph-pipelines

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  NOTES  TODO  autograph.ps1
ext/: CMakeLists.txt
ext/autograph/: CMakeLists.txt  README.md
ext/autograph/ext/: CMakeLists.txt
ext/autograph/src/autograph/: bind.hpp  buffer.hpp  compute.hpp  copy.hpp  device.cpp  device.hpp  draw.hpp  error.hpp  fence.hpp  (+12 more)
ext/glloadgen/: CMakeLists.txt  gl_core_4_5.cpp  gl_core_4_5.h  gl_core_4_5.hpp
ext/imgui/: ImGuizmo.h  imconfig.h  imgui_dock.inl  imgui_user.h  imgui_user.inl
ext/imgui_glfw3/: imgui_impl_glfw_gl3.cpp
ext/lua-5.3.3/: CMakeLists.txt
ext/luajit_bin/lib/: lua51.exp
ext/mcpp/: CMakeLists.txt  directive.c  mcpp_lib.h
ext/nanovg/src/: nanovg_gl.h
ext/skia-bin/include/: skia.h
src/Core/: AABB.cpp  CMakeLists.txt  Cache.cpp  Camera.cpp  ImageFormat.cpp  Transform.cpp
src/Core/Support/: Debug.cpp  FileDialog.cpp  IDTable.cpp  ProjectRoot.cpp  SmallVector.cpp  md5.cpp
src/Editor/: CMakeLists.txt  DebugUI.cpp  Resource.h  main.cpp
src/Editor/ui/: UIBuilder.h  UICanvas.cpp  UICanvas.h  Widget.h
src/Engine/: Application.cpp  Arcball.cpp  Bindings.cpp  CMakeLists.txt  CVar.cpp  DebugOverlay.cpp  Engine.cpp  EntityManager.cpp  FrameGraph.cpp  ImGuiUtils.cpp  ImageUtils.cpp  Input.cpp  Light.cpp  MathUtils.cpp  Mesh.cpp  Meta.cpp.in  Plugin.cpp  Profiler.cpp  RenderTarget.cpp  RenderUtils.cpp  Renderable.cpp  ResourceManager.cpp  ResourcePool.cpp  SceneObject.cpp  ScriptContext.cpp  Shader.cpp  ShaderPreprocessor.cpp  ShaderPreprocessor.h  Window.cpp.old
src/Engine/imgui/: ImGuizmo.cpp  imgui.cpp  imgui_demo.cpp  imgui_dock.inl  imgui_draw.cpp  imgui_impl_gl3.cpp  imgui_impl_gl3.h  imgui_user.inl  stb_truetype.h
src/Main/: CMakeLists.txt  Canvas.cpp  Canvas.h  DeferredEvalPass.cpp  GeometryPass.cpp  Renderer.h  Scene2D.cpp  Scene2D.h  TemporalAntiAliasingPass.cpp  main.cpp
src/autograph/: CMakeLists.txt  bind.cpp  bind.hpp  buffer.cpp  buffer.hpp  compute.hpp  device.cpp  device.hpp  draw.hpp  draw_state.hpp  fence.cpp  fence.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  gl_handle.hpp  image_desc.hpp  lazy_resource.hpp  load_texture.cpp  load_texture.hpp  optional.hpp  program.cpp  program.hpp  rect.hpp  sampler.cpp  sampler.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  shader_stage.hpp  texture.cpp  texture.hpp  texture_cache.cpp  texture_cache.hpp  upload_buffer.cpp  upload_buffer.hpp  utils.hpp  vertex_array.cpp  vertex_array.hpp
src/core/: AABB.cpp  CMakeLists.txt  Camera.cpp  ImageFormat.cpp  Transform.cpp
src/cxx-reflect/: CMakeLists.txt
src/cxx-reflect/src/: main.cpp
src/editor/: Application.cpp  Await.h  CMakeLists.txt  Coroutine.h  DebugUI.h  HUD.cpp  Input.cpp  Meta.cpp.in  Meta.h  RectTransform.cpp  Scene.cpp  Scene.h  ScriptEngine.cpp  ScriptEngine.h  main.cpp
src/editor/src/: await.hpp  behavior.hpp  coroutine.hpp  coroutine_script.hpp  debug_imgui.cpp  debug_imgui.hpp  entity.cpp  entity.hpp  input.cpp  input.hpp  main.cpp  meta.cpp.in  meta.hpp  meta_headers.hpp  observable.hpp  rect.hpp  rect_transform.cpp  rect_transform.hpp  resource.hpp  scene.cpp  scene.hpp  slot_map.hpp  sprite.hpp  test_reflection.hpp  vector_sprite.hpp
src/editor/ui/: Button.hpp  DefaultStyle.cpp  DefaultStyle.h  State.hpp  UIBuilder.h  UICanvas.cpp  UICanvas.h  Widget.h
src/engine/: Application.cpp  Arcball.cpp  Bindings.cpp  Bindings.h  CMakeLists.txt  CVar.cpp  CameraControl.cpp  DebugOverlay.cpp  DynamicModule.cpp  EntityManager.cpp  ImGuiUtils.cpp  ImageUtils.cpp  Input.cpp  MathUtils.cpp  Mesh.cpp  Meta.cpp.in  Plugin.cpp  Profiler.cpp  RenderTarget.cpp  RenderUtils.cpp  ResourceManager.cpp  ResourcePool.cpp  Scene.cpp  SceneEditor.cpp  SceneLoader.cpp  SceneUtils.cpp  ScriptContext.cpp  Shader.cpp  Window.cpp  WindowStylusWin32.cpp
src/engine/imgui/: imgui.cpp  imgui_dock.inl  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  imgui_user.inl
src/gl/: Bind.cpp  Bind.hpp  Buffer.cpp  CMakeLists.txt  Capture.cpp  Compute.hpp  Device.cpp  Draw.hpp  Fence.cpp  Framebuffer.cpp  GLHandle.cpp  LazyResource.hpp  LoadTexture.cpp  LoadTexture.hpp  Program.cpp  Sampler.cpp  ShaderPreprocessor.cpp  StateGroup.cpp  Texture.cpp  TextureCache.cpp  TextureCache.hpp  UploadBuffer.cpp  VertexArray.cpp  gl_core_4_5.cpp
src/main/: Arcball.cpp  Arcball.h  Bindings.cpp  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Canvas.cpp  Canvas.h  Effect.cpp  Effect.h  ImGuiBindings.cpp  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h  TrackballCamera.h  Widget.cpp  Widget.h  imgui_iterator.inc  imgui_lua_bindings.cpp  main.cpp
src/main/src/: Bindings.cpp  Bindings.h  Effect.cpp  Effect.h  Mesh.cpp  Mesh.h  RenderGraph.h  Scene.cpp  Scene.h  SceneRenderer.cpp  main.cpp
src/support/: CMakeLists.txt  Debug.cpp  Failwith.cpp  IDMap.cpp  IDTable.cpp  ProjectRoot.cpp  SmallVector.cpp
src_core/editor_shell/: CMakeLists.txt  main.cpp
src_core/engine/: Application.cpp  Arcball.cpp  Bindings.cpp  CMakeLists.txt  DebugOverlay.cpp  Engine.cpp  EntityManager.cpp  ImGuiUtils.cpp  ImageUtils.cpp  Light.cpp  Plugin.cpp  Profiler.cpp  RenderTarget.cpp  RenderUtils.cpp  Renderable.cpp  SceneObject.cpp  Shader.cpp  Window.cpp
src_core/engine/imgui/: ImGuizmo.cpp  imgui_demo.cpp  imgui_impl_glfw_gl3.cpp
src_core/gl/: Buffer.cpp  CMakeLists.txt  Capture.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  GLHandle.cpp  LoadTexture.cpp  Program.cpp  Query.cpp  Sampler.cpp  StateGroup.cpp  Texture.cpp  UploadBuffer.cpp  VertexArray.cpp  gl_core_4_5.cpp
src_core/main/: CMakeLists.txt  Canvas.cpp  Canvas.h  Scene2D.cpp  Scene2D.h  main.cpp
src_core/math/: AABB.cpp  CMakeLists.txt  Camera.cpp  ImageFormat.cpp
src_core/support/: CMakeLists.txt  FileDialog.cpp
src_plugins/CurveEditor/: CMakeLists.txt  CurveEditor.cpp
tools/cxx-reflect/: CMakeLists.txt  run.cmd
tools/cxx-reflect/src/: main.cpp
tools/editor/: CMakeLists.txt
tools/editor/src/: main.cpp  meta.hpp
(+419 files in other folders)
